trunk/Archive2/02/b853d2806d6071/output
main.cpp:11:13: error: no matching function for call to 'deduce'
   decltype(deduce<P...>(&overloaded))>::type;
            ^~~~~~~~~~~~
main.cpp:16:2: note: in instantiation of template type alias 'full_type' requested here
        full_type<> b;
        ^
main.cpp:7:6: note: candidate template ignored: couldn't infer template argument 'R'
auto deduce(R (P...)) -> R (&&)(P...);
     ^
1 error generated.
